# zenthra-v2

./: .gitignore  Cargo.toml  README.md  backdrop.md  features_before_publish.md  test_screenshot.sh
.github/workflows/: ci.yml  release.yml
apps/file_manager/: .gitignore  Cargo.toml
apps/file_manager/.github/workflows/: release.yml
apps/file_manager/src/: main.rs  state.rs  theme.rs
apps/file_manager/src/ui_layout/: common.rs  dialogs.rs  file_list.rs  mod.rs  navigation.rs  preview.rs  sidebar.rs  status_bar.rs  title_bar.rs
apps/image_viewer/: Cargo.toml
apps/image_viewer/src/: main.rs  state.rs  theme.rs  ui_components.rs
crates/zenthra/: Cargo.toml
crates/zenthra-animation/: Cargo.toml
crates/zenthra-core/: Cargo.toml
crates/zenthra-core/src/: color.rs  element.rs  event.rs  glyph.rs  id.rs  image.rs  lib.rs  rect.rs  render_mode.rs  response.rs  style.rs  widget.rs
crates/zenthra-input/: Cargo.toml
crates/zenthra-layout/: Cargo.toml
crates/zenthra-layout/src/: flex.rs  grid.rs  lib.rs  node.rs  stack.rs
crates/zenthra-platform/: Cargo.toml
crates/zenthra-platform/src/: app.rs  event.rs  lib.rs  window.rs
crates/zenthra-render/: Cargo.toml
crates/zenthra-render/src/: blit_pipeline.rs  blur_pipeline.rs  gpu.rs  image_pipeline.rs  lib.rs  rect_pipeline.rs  text_pipeline.rs  texture.rs
crates/zenthra-render/src/shaders/: blit.wgsl  blur.wgsl  image.wgsl  rect.wgsl  text.wgsl
crates/zenthra-state/: Cargo.toml
crates/zenthra-state/src/: computed.rs  effect.rs  lib.rs  signal.rs  store.rs
crates/zenthra-text/: Cargo.toml
crates/zenthra-text/src/: font.rs  layout.rs  lib.rs  prelude.rs  rasterizer.rs  shaper.rs
crates/zenthra-text/src/defaults/: atlas.rs  cosmic_font.rs  mod.rs  swash_raster.rs
crates/zenthra-text/src/gpu/: atlas.rs  shader.wgsl
crates/zenthra-text/src/managed/: engine.rs
crates/zenthra-text/src/primitives/: pipeline.rs
crates/zenthra-text/src/renderer/: text_renderer.rs
crates/zenthra-text/src/traits/: font_provider.rs
crates/zenthra-text/src/types/: color.rs  glyph.rs  line.rs  options.rs
crates/zenthra-theme/: Cargo.toml
crates/zenthra-widgets/: Cargo.toml
crates/zenthra-widgets/src/: button.rs  container.rs  icons.rs  image.rs  input.rs  lazy_container.rs  lib.rs  progress_bar.rs  slider.rs  switch.rs  text.rs  text_area.rs  ui.rs  window.rs
crates/zenthra-widgets/src/containers/: card.rs  mod.rs  panel.rs
crates/zenthra-widgets/src/controls/: checkbox.rs  dropdown.rs  menu.rs  mod.rs  radio.rs  toggle.rs
crates/zenthra-widgets/src/layout/: mod.rs  stack.rs
crates/zenthra/src/: app.rs  lib.rs
docs/: architecture.md  widget-guide.md
examples/: button.rs  button_default.rs  card_test.rs  checkbox_list.rs  checkbox_test.rs  color_test.rs  container_test.rs  custom_shader_demo.rs  declarative_event_test.rs  dropdown_test.rs  edit.rs  floating_window.rs  glassmorphism_demo.rs  image_simple.rs  image_test.rs  liquid_distortion.wgsl  main.html  menu_test.rs  nested_wrap.rs  panel_test.rs  progress_test.rs  radio_list.rs  render_modes.rs  scroll_test.rs  sidebar_test.rs  simple_dynamic.rs  simple_window.rs  slider_test.rs  stack_test.rs  switch_test.rs  toggle_list.rs  window_test.rs  wrapper_modes.rs
examples/containers/: main.rs
examples/edit/: main.rs
examples/hello/: main.rs
examples/scroll_test/: main.rs
examples/text/: main.rs
examples/window_test_mobile/: Cargo.toml
examples/window_test_mobile/src/: lib.rs
examples/wrapper_test/: main.rs
widgets/: button.md  container.md  input.md  lazy_container.md  slider.md  text.md  text_area.md
