[workspace]
members = [
    "crates/zenthra",
    "crates/zenthra-core",
    "crates/zenthra-render",
    "crates/zenthra-layout",
    "crates/zenthra-widgets",
    "crates/zenthra-state",
    "crates/zenthra-animation",
    "crates/zenthra-text",
    "crates/zenthra-input",
    "crates/zenthra-platform",
    "crates/zenthra-theme",
    "examples/window_test_mobile",
]
resolver = "2"

[workspace.package]
version    = "0.2.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/kabirajpan/zenthra-v2"
homepage   = "https://github.com/kabirajpan/zenthra-v2"
readme     = "README.md"

[workspace.dependencies]
# ── Internal ─────────────────────────────────────────────
zenthra-core      = { path = "crates/zenthra-core", version = "0.2.0" }
zenthra-render    = { path = "crates/zenthra-render", version = "0.2.0" }
zenthra-layout    = { path = "crates/zenthra-layout", version = "0.2.0" }
zenthra-widgets   = { path = "crates/zenthra-widgets", version = "0.2.0" }
zenthra-state     = { path = "crates/zenthra-state", version = "0.2.0" }
zenthra-animation = { path = "crates/zenthra-animation", version = "0.2.0" }
zenthra-text      = { path = "crates/zenthra-text", version = "0.2.0" }
zenthra-input     = { path = "crates/zenthra-input", version = "0.2.0" }
zenthra-platform  = { path = "crates/zenthra-platform", version = "0.2.0" }
zenthra-theme     = { path = "crates/zenthra-theme", version = "0.2.0" }



# ── External ─────────────────────────────────────────────
winit        = "0.30"
wgpu         = "29"
bytemuck     = { version = "1.25", features = ["derive"] }
glam         = "0.29"
cosmic-text  = { version = "0.18", features = ["swash"] }
etagere      = "0.3"
taffy        = "0.10"
rustc-hash   = "2.0"
pollster     = "0.3"
log          = "0.4"
env_logger   = "0.11"
image        = "0.24"

# ── Compilation Profile Optimization ──────────────────────────
[profile.dev]
opt-level = 0
debug = 1            # Line tables only: dramatically reduces debug info size and speeds up linker
incremental = true   # Ensures incremental compilation is enabled

# Compile dependencies with high optimization so they run at release-mode speeds,
# while keeping our workspace crates compiling instantly.
[profile.dev.package."*"]
opt-level = 3
