[package]
name = "file-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
zenthra = "0.1.2"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
dirs = "5"
jiff = "0.2"
winit = "0.30"


[workspace]
# Empty workspace table isolates this package from being automatically grouped into parent workspaces.

[patch.crates-io]
zenthra = { path = "../../crates/zenthra" }
