[package]
name = "image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
zenthra = { path = "../../crates/zenthra" }
zenthra-core = { path = "../../crates/zenthra-core" }
zenthra-widgets = { path = "../../crates/zenthra-widgets" }
zenthra-platform = { path = "../../crates/zenthra-platform" }
glam = "0.29"
log = "0.4"
env_logger = { workspace = true }
rfd = "0.15"
dirs = "5"
