[package]
name    = "zenthra-animation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Physics-based animation and transition engine for the Zenthra UI framework"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
zenthra-core  = { workspace = true }
zenthra-state = { workspace = true }
glam          = { workspace = true }
