[package]
name    = "zenthra-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Input state tracking, key bindings, and mouse events for the Zenthra UI framework"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
zenthra-core = { workspace = true }
glam         = { workspace = true }
winit        = { workspace = true }
