[package]
name    = "zenthra-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Layout engine and coordinate systems for the Zenthra UI framework"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
zenthra-core = { workspace = true }
taffy        = { workspace = true }
glam         = { workspace = true }
