[package]
name    = "zenthra-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Windowing and platform abstraction layer for the Zenthra UI framework"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
zenthra-core  = { workspace = true }
zenthra-input = { workspace = true }
zenthra-render = { workspace = true }
winit         = { workspace = true }
wgpu          = { workspace = true }
glam          = { workspace = true }
pollster      = { workspace = true }
log           = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
