[package]
name    = "zenthra-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zenthra-core = { workspace = true }
wgpu         = { workspace = true }
winit        = { workspace = true }
bytemuck     = { workspace = true }
glam         = { workspace = true }
log          = { workspace = true }
image        = { workspace = true }
