[package]
name    = "zenthra-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wgpu-based GPU renderer for the Zenthra UI framework"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
zenthra-core = { workspace = true }
wgpu         = { workspace = true }
winit        = { workspace = true }
bytemuck     = { workspace = true }
glam         = { workspace = true }
log          = { workspace = true }
image        = { workspace = true }
