[package]
name    = "zenthra-theme"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Color schemes, theme palettes, and UI styling config for the Zenthra UI framework"
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
zenthra-core = { workspace = true }
glam         = { workspace = true }
