[package]
name    = "zenthra-widgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zenthra-core   = { workspace = true }
zenthra-layout = { workspace = true }
zenthra-render = { workspace = true }
zenthra-state  = { workspace = true }
zenthra-theme  = { workspace = true }
zenthra-text   = { workspace = true }
zenthra-platform = { workspace = true }
winit            = { workspace = true }
glam           = { workspace = true }
log            = { workspace = true }
