[package]
name    = "zenthra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zenthra-core      = { workspace = true }
zenthra-render    = { workspace = true }
zenthra-layout    = { workspace = true }
zenthra-widgets   = { workspace = true }
zenthra-state     = { workspace = true }
zenthra-animation = { workspace = true }
zenthra-text      = { workspace = true }
zenthra-input     = { workspace = true }
zenthra-platform  = { workspace = true }
zenthra-theme     = { workspace = true }
log               = { workspace = true }
wgpu              = { workspace = true }
winit             = { workspace = true }
bytemuck          = { workspace = true }


[[example]]
name = "hello"
path = "../../examples/hello/main.rs"

[[example]]
name = "text"
path = "../../examples/text/main.rs"

[[example]]
name = "containers"
path = "../../examples/containers/main.rs"

[[example]]
name = "nested_wrap"
path = "../../examples/nested_wrap.rs"
[[example]]
name = "edit"
path = "../../examples/edit/main.rs"

[[example]]
name = "button"
path = "../../examples/button.rs"

[[example]]
name = "render_modes"
path = "../../examples/render_modes.rs"

[[example]]
name = "button_default"
path = "../../examples/button_default.rs"

[[example]]
name = "wrapper_test"
path = "../../examples/wrapper_test/main.rs"

[[example]]
name = "wrapper_modes"
path = "../../examples/wrapper_modes.rs"

[[example]]
name = "container_test"
path = "../../examples/container_test.rs"

[[example]]
name = "slider_test"
path = "../../examples/slider_test.rs"

[[example]]
name = "progress_test"
path = "../../examples/progress_test.rs"

[[example]]
name = "switch_test"
path = "../../examples/switch_test.rs"

[[example]]
name = "image_test"
path = "../../examples/image_test.rs"

[[example]]
name = "image_simple"
path = "../../examples/image_simple.rs"

[[example]]
name = "checkbox_test"
path = "../../examples/checkbox_test.rs"

[[example]]
name = "checkbox_list"
path = "../../examples/checkbox_list.rs"

[[example]]
name = "toggle_list"
path = "../../examples/toggle_list.rs"

[[example]]
name = "radio_list"
path = "../../examples/radio_list.rs"

[[example]]
name = "dropdown_test"
path = "../../examples/dropdown_test.rs"
